# md-500-access-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: sysex-notes.md
md500/: Cargo.toml
md500-core/: Cargo.toml
md500-core/src/: address.rs  assigncat.rs  bank.rs  catalog.rs  codec.rs  common.rs  device.rs  inbound.rs  lib.rs  patch.rs  pc_map.rs  setup.rs  sysex.rs  system.rs  yaml.rs
md500-wasm/: Cargo.toml
md500-wasm/src/: lib.rs
md500/src/: main.rs
schemas/: md500-bank.schema.json  md500-patch.schema.json  md500-pc-map.schema.json  md500-setup.schema.json  md500-system.schema.json
