[workspace]
resolver = "2"
members = ["md500-core", "md500", "md500-wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ragb/md-500-access-rs"
description = "BOSS MD-500 modulation pedal SysEx codec, CLI, and WASM bindings."

[workspace.dependencies]
md500-core = { path = "md500-core" }
# Shared foundation crates, pinned to the published kit (same tag the rest of the
# family uses). For local development against an unreleased kit, point these at
# `path = "../midi-access-kit/<crate>"`.
midi-access-core = { git = "https://github.com/ragb/midi-access-kit", tag = "v0.1.0" }
midi-access-cli = { git = "https://github.com/ragb/midi-access-kit", tag = "v0.1.0" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
midir = "0.10"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
tsify-next = { version = "0.5", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
schemars = "0.8"

[profile.release]
lto = "thin"
strip = true
