[package]
name = "md500-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM + TypeScript bindings for md500-core."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
md500-core = { workspace = true, features = ["tsify"] }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
tsify-next = { workspace = true }
# Required because a transitive dep may pull in `getrandom`; the `.cargo/config.toml`
# flag and this feature must both be set.
getrandom = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# wasm-opt bundled with wasm-pack doesn't accept some features rustc emits; the
# binary is fine without the post-processing step.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
